--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tangerine-website",
-  "homepage": "https://yawsonsamuel320.github.io/tangerine-website",
+  "homepage": "https://tangerineshopper.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.12.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
