--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - main
+      
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 
 jobs:
   deploy:
